# camera

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  secure_boot_signing_key.pem  testCv.py
.devcontainer/: Dockerfile  devcontainer.json  install_micro_ros_deps_script.sh
host/: CMakelists.txt  README.md  main.cpp  package.xml
main/: CMakeLists.txt  camera.c  camera.h  camera_local.h  connectwifi.c  connectwifi.h  publisher.c  publisher.h  take_picture.c
