idf_component_register(
    SRCS
        take_picture.c
        connectwifi.c
        publisher.c
        camera.c
    PRIV_INCLUDE_DIRS 
        .
    PRIV_REQUIRES
        nvs_flash
        esp_psram 
        esp_wifi
        esp_http_server
        esp_timer
        micro_ros_espidf_component
) 
